// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders without error with admin user 1`] = `
<div>
  <div
    style="margin-top: 12px;"
  >
    <div
      class="field is-grouped"
    >
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Luo uusi vierailu
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Varaukset
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Lisävalinnat
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Lomakkeet
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Ryhmät
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Vierailulista
        </button>
      </div>
      <div>
        <button
          class="button luma"
        >
          csv
        </button>
      </div>
    </div>
    <div
      class="field is-grouped"
    >
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Käyttäjälista
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Sähköpostit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders without error with empty user 1`] = `
<div>
  <div />
</div>
`;

exports[`Renders without error with user 1`] = `
<div>
  <div
    style="margin-top: 12px;"
  >
    <div
      class="field is-grouped"
    >
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Luo uusi vierailu
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Varaukset
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Lisävalinnat
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Lomakkeet
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Ryhmät
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button luma"
        >
          Vierailulista
        </button>
      </div>
      <div>
        <button
          class="button luma"
        >
          csv
        </button>
      </div>
    </div>
    <div
      class="field is-grouped"
    />
  </div>
</div>
`;
